CSRV-31 Создать каркас приложения superfly (work in progress)
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@167 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-remote-api/pom.xml
+++ b/superfly-remote-api/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-remote-api</artifactId>
 	<name>Superfly Remote API</name>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0-1-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<plugin>
