CSRV-31 Создать каркас приложения superfly (work in progress) - configured datasource
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@171 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -18,7 +18,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
 		</dependency>
-		<!-- proc jdbc -->
 		<dependency>
 			<artifactId>jdbc-proc-daofactory</artifactId>
 			<groupId>com.googlecode.jdbc-proc</groupId>
@@ -27,5 +26,13 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
+	    <dependency>
+	    	<groupId>org.aspectj</groupId>
+	    	<artifactId>aspectjrt</artifactId>
+	    </dependency>
+	    <dependency>
+	    	<groupId>org.aspectj</groupId>
+	    	<artifactId>aspectjweaver</artifactId>
+	    </dependency>
 	</dependencies>
 </project>
