--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,31 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+		    <dependency>
+		    	<groupId>org.aspectj</groupId>
+		    	<artifactId>aspectjrt</artifactId>
+		    	<version>1.6.5</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.aspectj</groupId>
+		    	<artifactId>aspectjweaver</artifactId>
+		    	<version>1.6.5</version>
+		    </dependency>
+            <dependency>
+                <groupId>commons-dbcp</groupId>
+                <artifactId>commons-dbcp</artifactId>
+                <version>1.2.2</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-pool</groupId>
+                <artifactId>commons-pool</artifactId>
+                <version>1.5.3</version>
+            </dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>5.1.10</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
