CSRV-33 Создать расширение для Spring Security для аутентификации к ССО CSRV-34 Создать демо-приложение (demo for spring security extension)
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@174 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,10 @@
     	<param-name>configuration</param-name>
     	<param-value>development</param-value>
     </context-param>
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>superfly</param-value>
+	</context-param>
 	
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
