CSRV-31 Создать каркас приложения superfly
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@176 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
         	/WEB-INF/spring/applicationContext-security.xml
         	/WEB-INF/spring/applicationContext-common.xml
         	/WEB-INF/spring/applicationContext-datasource.xml
+        	/WEB-INF/spring/applicationContext-dao.xml
         	/WEB-INF/spring/applicationContext-service.xml
         	/WEB-INF/spring/applicationContext-aop.xml
             /WEB-INF/spring/remoting.xml
