CSRV-35 Приделать процедуру аутентификации CSRV-34 Создать демо-приложение (work in progress, no SSL yet)
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@177 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,10 @@
 		<param-name>webAppRootKey</param-name>
 		<param-value>superfly-demo</param-value>
 	</context-param>
+	<context-param>
+		<param-name>superfly-sso-service-url</param-name>
+		<param-value>http://localhost:8080/superfly/sso.service</param-value>
+	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
