--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -2,16 +2,26 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
-	<artifactId>superfly-demo</artifactId>
-	<packaging>war</packaging>
-	<name>Superfly Demo Application</name>
+	<artifactId>superfly-client</artifactId>
+	<name>Superfly Client</name>
 	<version>1.0-1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
-			<artifactId>superfly-spring-security</artifactId>
+			<artifactId>superfly-remote-api</artifactId>
 			<version>1.0-1-SNAPSHOT</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>2.5.6.SEC01</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core-tiger</artifactId>
+			<version>2.0.4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework</groupId>
@@ -23,40 +33,23 @@
 				</exclusion>
 				<exclusion>
 					<groupId>org.springframework</groupId>
-					<artifactId>spring-aop</artifactId>
+					<artifactId>spring-beans</artifactId>
 				</exclusion>
 				<exclusion>
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-support</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-aop</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>2.5.6.SEC01</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.4</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.payneteasy.superfly</groupId>
-			<artifactId>superfly-client</artifactId>
-			<version>1.0-1-SNAPSHOT</version>
-		</dependency>
+	    <dependency>
+	    	<groupId>commons-digester</groupId>
+	    	<artifactId>commons-digester</artifactId>
+	    	<version>2.0</version>
+	    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
