--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -66,20 +66,20 @@
 	</welcome-file-list>
 	
 	    <!-- WICKET -->
-<!-- 
+
     <filter>
-        <filter-name>wicket.alerting</filter-name>
+        <filter-name>wicket.superfly</filter-name>
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationClassName</param-name>
-            <param-value>com.payneteasy.alerting.web.WicketApplication</param-value>
+            <param-value>com.payneteasy.superfly.web.WicketApplication</param-value>
         </init-param>
     </filter>
 
     <filter-mapping>
-        <filter-name>wicket.alerting</filter-name>
+        <filter-name>wicket.superfly</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
- -->
+
 	
 </web-app>
