Wicket does not intercept calls to remote services
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@188 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -58,7 +58,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>remoting</servlet-name>
-        <url-pattern>*.service</url-pattern>
+        <url-pattern>/remoting/*</url-pattern>
     </servlet-mapping>
     
 	<welcome-file-list>
@@ -73,6 +73,10 @@
         <init-param>
             <param-name>applicationClassName</param-name>
             <param-value>com.payneteasy.superfly.web.WicketApplication</param-value>
+        </init-param>
+        <init-param>
+        	<param-name>ignorePaths</param-name>
+        	<param-value>/remoting/</param-value>
         </init-param>
     </filter>
 
