--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.10</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>2.5.6.SEC01</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
