--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -30,6 +30,10 @@
 	    	<artifactId>commons-digester</artifactId>
 	    	<version>2.0</version>
 	    </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
