--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -57,6 +57,16 @@
 			<artifactId>superfly-client</artifactId>
 			<version>1.0-1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.4.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
