--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
+        	/WEB-INF/superfly-client.xml
         	/WEB-INF/spring-security.xml
         </param-value>
 	</context-param>
