--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,34 @@
 		    	<artifactId>aspectjweaver</artifactId>
 		    	<version>1.6.5</version>
 		    </dependency>
+		    <dependency>
+		    	<groupId>commons-digester</groupId>
+		    	<artifactId>commons-digester</artifactId>
+		    	<version>2.0</version>
+		    </dependency>
+		    
+			<!-- WICKET DEPENDENCIES -->
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket</artifactId>
+				<version>1.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-spring</artifactId>
+				<version>1.4.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-spring</artifactId>
+				<version>1.4.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-extensions</artifactId>
+				<version>1.4.2</version>
+			</dependency>
+		    
             <dependency>
                 <groupId>commons-dbcp</groupId>
                 <artifactId>commons-dbcp</artifactId>
@@ -201,6 +229,38 @@
 				<artifactId>spring-test</artifactId>
 				<version>2.5.6.SEC01</version>
 				<scope>test</scope>
+			</dependency>
+			
+			<!--  JETTY DEPENDENCIES FOR TESTING  -->
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty</artifactId>
+				<version>6.1.21</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-util</artifactId>
+				<version>6.1.21</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-management</artifactId>
+				<version>6.1.21</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-plus</artifactId>
+				<version>6.1.21</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-naming</artifactId>
+				<version>6.1.21</version>
+				<scope>provided</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
