--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -52,13 +52,26 @@
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-	</welcome-file-list><!--
+	</welcome-file-list>
 	
-	<jsp-config>
-		<taglib>
-			<taglib-uri>http://java.sun.com/jstl/core</taglib-uri>
-			<taglib-location></taglib-location>
-		</taglib>
-	</jsp-config>
+    <!-- WICKET -->
 
---></web-app>
+    <filter>
+        <filter-name>wicket.superfly</filter-name>
+        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+        <init-param>
+            <param-name>applicationClassName</param-name>
+            <param-value>com.payneteasy.superfly.demo.web.wicket.DemoApplication</param-value>
+        </init-param>
+        <init-param>
+        	<param-name>ignorePaths</param-name>
+        	<param-value>/remoting/</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>wicket.superfly</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+	
+</web-app>
