--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,7 @@
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationClassName</param-name>
-            <param-value>com.payneteasy.superfly.web.WicketApplication</param-value>
+            <param-value>com.payneteasy.superfly.web.wicket.WicketApplication</param-value>
         </init-param>
         <init-param>
         	<param-name>ignorePaths</param-name>
