--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,11 @@
 				<artifactId>wicket-extensions</artifactId>
 				<version>1.4.2</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.wicket</groupId>
+				<artifactId>wicket-datetime</artifactId>
+				<version>1.4.2</version>
+			</dependency>
 		    
             <dependency>
                 <groupId>commons-dbcp</groupId>
