--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -89,6 +89,10 @@
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-extensions</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-datetime</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
