--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 				<version>1.0-1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-httpclient-ssl</artifactId>
+				<version>1.0-1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
 				<version>2.5.6.SEC01</version>
@@ -185,6 +190,11 @@
 		    	<groupId>commons-digester</groupId>
 		    	<artifactId>commons-digester</artifactId>
 		    	<version>2.0</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>commons-httpclient</groupId>
+		    	<artifactId>commons-httpclient</artifactId>
+		    	<version>3.1</version>
 		    </dependency>
 		    
 			<!-- WICKET DEPENDENCIES -->
