CSRV-83 Настроить spring-security на стороне superfly, чтобы использовалась БД - the same for subsystems
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@270 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,18 @@
 	</context-param>
 	<context-param>
 		<param-name>superfly-sso-service-url</param-name>
-		<param-value>http://localhost:8080/superfly/sso.service</param-value>
+		<!-- If you're not using SSL client auth for your SSOService calls,
+			you will probably want to set here an absolute URL (beginning with
+			http:// and host name). -->
+		<param-value>/superfly/sso.service</param-value>
+	</context-param>
+	<context-param>
+		<param-name>superfly-sso-service-host</param-name>
+		<param-value>localhost</param-value>
+	</context-param>
+	<context-param>
+		<param-name>superfly-sso-service-secure-port</param-name>
+		<param-value>8443</param-value>
 	</context-param>
 
 	<listener>
