--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>wicket-spring</artifactId>
 			<version>1.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.payneteasy.superfly</groupId>
+			<artifactId>superfly-client-opt</artifactId>
+			<version>1.0-1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
