--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -9,6 +9,7 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-web</artifactId>
 	<packaging>war</packaging>
+	<name>Superfly server web-application</name>
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
@@ -133,7 +134,7 @@
 				</excludes>
 			</testResource>
 		</testResources>
-		<finalName>alerting</finalName>
+		<finalName>superfly</finalName>
 	</build>
 
 </project>
