--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,10 @@
 						<groupId>org.springframework</groupId>
 						<artifactId>spring-aop</artifactId>
 					</exclusion>
+    				<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-support</artifactId>
+					</exclusion>
 					<exclusion>
 						<groupId>commons-logging</groupId>
 						<artifactId>commons-logging</artifactId>
