--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 	<modules>
 		<module>superfly-service</module>
 		<module>superfly-web</module>
+        <module>superfly-httpclient-ssl</module>
+        <module>superfly-client</module>
+        <module>superfly-client-opt</module>
 	</modules>
 
 	<scm>
@@ -283,6 +286,15 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 	
 	<build>
 		<plugins>
