--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>superfly-httpclient-ssl</module>
         <module>superfly-client</module>
         <module>superfly-client-opt</module>
+        <module>superfly-spring-security</module>
 	</modules>
 
 	<scm>
@@ -208,27 +209,27 @@
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket</artifactId>
-				<version>1.4.1</version>
+				<version>1.4.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-spring</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-spring</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-extensions</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-datetime</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 			</dependency>
 		    
             <dependency>
