--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -38,5 +38,9 @@
 	    	<groupId>org.aspectj</groupId>
 	    	<artifactId>aspectjweaver</artifactId>
 	    </dependency>
+	    <dependency>
+	    	<groupId>commons-digester</groupId>
+	    	<artifactId>commons-digester</artifactId>
+	    </dependency>
 	</dependencies>
 </project>
