--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -4,8 +4,47 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-demo</artifactId>
 	<packaging>war</packaging>
-	<name>Superfly Demo Application</name>
 	<version>1.0-1-SNAPSHOT</version>
+	<name>Superfly Demo Application</name>
+	<description>Demo application which demonstrates the use of a Superfly server for authentication and authorization, as well as integration with Spring Security and SSL with mutual authentication</description>
+	
+	<scm>
+		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
+		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
+	</scm>
+
+	<!--
+    -      Distributions
+    -->
+	<distributionManagement>
+		<repository>
+			<id>common-release</id>
+			<name>Local Maven repository of releases</name>
+			<url>http://amberlords.com:8081/nexus/content/repositories/common-release</url>
+		</repository>
+		<snapshotRepository>
+			<id>common-snapshot</id>
+			<name>Local Maven repository of snapshots</name>
+			<url>http://amberlords.com:8081/nexus/content/repositories/common-snapshot</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>		
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>common-release</id>
+			<name>Our maven releases repository with common user access</name>
+			<url>http://amberlords.com:8081/nexus/content/groups/public</url>
+		</repository>
+        <!-- jdbc proc repository -->
+        <repository>
+            <id>jdbc-proc-release</id>
+            <name>jdbc proc release</name>
+            <url>http://jdbc-proc.googlecode.com/svn/maven2/release</url>
+        </repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
