--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -9,6 +9,7 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-service</artifactId>
 	<name>Superfly service layer</name>
+	<description>Service layer classes, including DAO layer too</description>
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
