--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-remote-api</artifactId>
-				<version>1.0-1-SNAPSHOT</version>
+				<version>1.0-1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
