Changed superfly-remote-api version to non-snapshot
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@333 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-spring-security/pom.xml
+++ b/superfly-spring-security/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-remote-api</artifactId>
-			<version>1.0-1-SNAPSHOT</version>
+			<version>1.0-1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
