[maven-release-plugin] prepare release superfly-parent-1.0-1
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@334 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.0-1-SNAPSHOT</version>
+	<version>1.0-1</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-service</module>
@@ -17,9 +16,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
-		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
-		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
+		<connection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</developerConnection>
+		<url>https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</url>
 	</scm>
 
 	<!--
@@ -63,12 +62,12 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-service</artifactId>
-				<version>1.0-1-SNAPSHOT</version>
+				<version>1.0-1</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-httpclient-ssl</artifactId>
-				<version>1.0-1-SNAPSHOT</version>
+				<version>1.0-1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
