--- a/superfly-spring-security/pom.xml
+++ b/superfly-spring-security/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spring-security</artifactId>
 	<name>Spring Security Extension for Superfly</name>
-	<version>1.0-1-SNAPSHOT</version>
+	<version>1.0-1</version>
 	<description>Module for Spring Security which enables application to use Superfly authentication/authorization declaratively through Spring Security</description>
 	
 	<scm>
-		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
-		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
-		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
+		<connection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</developerConnection>
+		<url>https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</url>
 	</scm>
 
 	<!--
