--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.0-1</version>
+	<version>1.0-2-SNAPSHOT</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-service</module>
@@ -16,9 +16,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</connection>
-		<developerConnection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</developerConnection>
-		<url>https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</url>
+		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
+		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
 	</scm>
 
 	<!--
@@ -62,12 +62,12 @@
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-service</artifactId>
-				<version>1.0-1</version>
+				<version>1.0-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.payneteasy.superfly</groupId>
 				<artifactId>superfly-httpclient-ssl</artifactId>
-				<version>1.0-1</version>
+				<version>1.0-2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
