--- a/superfly-spring-security/pom.xml
+++ b/superfly-spring-security/pom.xml
@@ -3,13 +3,13 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spring-security</artifactId>
 	<name>Spring Security Extension for Superfly</name>
-	<version>1.0-1</version>
+	<version>1.0-2-SNAPSHOT</version>
 	<description>Module for Spring Security which enables application to use Superfly authentication/authorization declaratively through Spring Security</description>
 	
 	<scm>
-		<connection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</connection>
-		<developerConnection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</developerConnection>
-		<url>https://amberlords.com/softmary/common/tags/superfly-parent-1.0-1</url>
+		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
+		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
 	</scm>
 
 	<!--
