--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -3,14 +3,14 @@
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-1</version>
+	<version>1.0-2-SNAPSHOT</version>
 	<name>Superfly Demo Application</name>
 	<description>Demo application which demonstrates the use of a Superfly server for authentication and authorization, as well as integration with Spring Security and SSL with mutual authentication</description>
 	
 	<scm>
-		<connection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-demo-1.0-1</connection>
-		<developerConnection>scm:svn:https://amberlords.com/softmary/common/tags/superfly-demo-1.0-1</developerConnection>
-		<url>https://amberlords.com/softmary/common/tags/superfly-demo-1.0-1</url>
+		<connection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</connection>
+		<developerConnection>scm:svn:https://amberlords.com/softmary/common/trunk/superfly</developerConnection>
+		<url>https://amberlords.com/softmary/common/trunk/superfly</url>
 	</scm>
 
 	<!--
