Excluded more jira dependencies
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@374 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,14 @@
 						<groupId>jcaptcha</groupId>
 						<artifactId>jcaptcha</artifactId>
 			        </exclusion>
+	      	    	<exclusion>
+						<groupId>jta</groupId>
+						<artifactId>jta</artifactId>
+			        </exclusion>
+	      	    	<exclusion>
+						<groupId>jndi</groupId>
+						<artifactId>jndi</artifactId>
+			        </exclusion>
 	      	    </exclusions>
 	    	</dependency>
 		</dependencies>
