Excluded more jira dependencies
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@375 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,10 @@
 						<groupId>jndi</groupId>
 						<artifactId>jndi</artifactId>
 			        </exclusion>
+	      	    	<exclusion>
+						<groupId>ehcache</groupId>
+						<artifactId>ehcache</artifactId>
+			        </exclusion>
 	      	    </exclusions>
 	    	</dependency>
 		</dependencies>
