--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 		<!-- If you're not using SSL client auth for your SSOService calls,
 			you will probably want to set here an absolute URL (beginning with
 			http:// and host name). -->
-		<param-value>/superfly/sso.service</param-value>
+		<param-value>/superfly/remoting/sso.service</param-value>
 	</context-param>
 	<context-param>
 		<param-name>superfly-sso-service-host</param-name>
