Excluded xfire-all dependency from jira
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@395 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -374,6 +374,14 @@
 						<groupId>ehcache</groupId>
 						<artifactId>ehcache</artifactId>
 			        </exclusion>
+					<exclusion>
+						<groupId>javax.activation</groupId>
+						<artifactId>activation</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.codehaus.xfire</groupId>
+						<artifactId>xfire-all</artifactId>
+					</exclusion>
 	      	    </exclusions>
 	    	</dependency>
 		</dependencies>
