- spring artifact is not a required dependency anymore for client artifacts - fixed a problem with inheritance from Spring classes which became final in Spring 3.0 - ability to disable the main SuperflyAuthenticationProvider
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@396 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -13,7 +13,6 @@
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-remote-api</artifactId>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
@@ -22,7 +21,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
-			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
