--- a/superfly-jira-integration/pom.xml
+++ b/superfly-jira-integration/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-jira-integration</artifactId>
-	<name>Superfly Integration to JIRA</name>
+	<name>Superfly Integration for JIRA</name>
 	<version>1.1-1-SNAPSHOT</version>
 	<description>Allows to use Superfly as authentication/authorization provider for JIRA</description>
 	<dependencies>
@@ -27,6 +27,11 @@
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
 			<artifactId>superfly-client-opt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.atlassian.jira</groupId>
