--- a/superfly-spring-security/pom.xml
+++ b/superfly-spring-security/pom.xml
@@ -14,6 +14,12 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
