--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
         <module>superfly-common</module>
         <module>superfly-client</module>
         <module>superfly-client-opt</module>
-        <module>superfly-spring-security</module>
+        <module>superfly-spring-security-common</module>
+        <module>superfly-spring-security-2.0</module>
         <module>superfly-jira-integration</module>
 	</modules>
 
@@ -115,6 +116,12 @@
 				<artifactId>superfly-client-opt</artifactId>
 				<version>1.1-1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>com.payneteasy.superfly</groupId>
+				<artifactId>superfly-spring-security-common</artifactId>
+				<version>1.1-1-SNAPSHOT</version>
+			</dependency>
+			
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring</artifactId>
