Added support for Spring Security 3.0
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@399 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-spring-security-2.0/pom.xml
+++ b/superfly-spring-security-2.0/pom.xml
@@ -8,7 +8,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spring-security-2.0</artifactId>
-	<version>1.1-1-SNAPSHOT</version>
+	<name>Spring Security 2.0.x Extension for Superfly</name>
+	<description>Module for Spring Security 2.0.x which enables application to use Superfly authentication/authorization declaratively through Spring Security 2.0.x</description>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.payneteasy.superfly</groupId>
