--- a/superfly-spring-security-common/pom.xml
+++ b/superfly-spring-security-common/pom.xml
@@ -7,8 +7,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spring-security-common</artifactId>
-	<name>Spring Security Extension for Superfly</name>
-	<description>Module for Spring Security which enables application to use Superfly authentication/authorization declaratively through Spring Security</description>
+	<name>Spring Security Extension for Superfly commons</name>
+	<description>Contains common classes for Spring Security support</description>
 	
 	<dependencies>
 		<dependency>
