--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>superfly-client-opt</module>
         <module>superfly-spring-security-common</module>
         <module>superfly-spring-security-2.0</module>
+        <module>superfly-spring-security</module>
         <module>superfly-jira-integration</module>
 	</modules>
 
