Removed @Secured annotation from link type dependencies of superfly-client
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@413 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -26,6 +26,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core-tiger</artifactId>
+			<scope>test</scope>
 		</dependency>
 	    <dependency>
 	    	<groupId>commons-digester</groupId>
