--- a/superfly-web/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-web/src/main/webapp/WEB-INF/log4j.properties
@@ -7,3 +7,4 @@ log4j.rootLogger=WARN,console
 
 log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
+#log4j.logger.com.googlecode=DEBUG
